Include construction alert

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 </head>
 
 <body>
-
+  <script>
+    alert("Website is under construction!! But you can still look around :)")
+  </script>
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
