--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 </head>
 
 <body>
+  <!-- Disable script
   <script>
     alert("Website is under construction!! But you can still look around :)")
   </script>
+  -->
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
@@ -48,13 +50,14 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Abhinav Singh</a></h1>
+        <h1 class="text-light text-center"><a href="index.html">Abhinav Singh</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+          <a href="https://www.facebook.com/profile.php?id=100008342294266" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://github.com/Abhinav-Git19" class="github"><i class="bx bxl-github"></i></a>
+          <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
+          <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
+          <a href="https://www.linkedin.com/in/abhinav-singh-bb2294b6/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -64,8 +67,8 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <!--<li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
+          <!--<li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>-->
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -79,6 +82,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhinav Singh</h1>
       <p>I'm <span class="typed" data-typed-items="Developer,BITS-Pilani Graduate,Gamer"></span></p>
+      <a class="btn btn-outline-primary" href="https://doc-08-20-apps-viewer.googleusercontent.com/viewer/secure/pdf/85qoqsk6rrdabcm56pdu2iess16jq9t7/qnpng013njjm51nh2qd7jlfbu957eiah/1596635775000/drive/08409355672147097264/ACFrOgCzoesbRpQmn9KkbgtFAmrKpaPDeI1oMg6mhKtPQDSHf5zVkKVn_gPmKPGNEO7uBal3MP8HDNmCqh--R31JdafdNEEOKdcYg9TnnD3ad8bwuR-i7uOUu0UBpNGACg9aVQ7iQ9Gy3gBspEzh?print=true&nonce=2rpmnd5t85noe&user=08409355672147097264&hash=0aks96qlu5578p3t7cn57l5m62rqb9ai">Download my Resume</a>
     </div>
   </section><!-- End Hero -->
 
@@ -90,7 +94,20 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            Abhinav Singh currently works as <strong>Member of Techinical Staff</strong>
+            in <em>Oracle India Pvt. Ltd</em>. He is part of <ins>Database Security Vulnerabilty Test and Tools Development</ins>
+            group responsible to developing automations and framework developemnt for detecting security vulnerabilites.
+            <br/> <br/>
+            He completed his <strong>B.E.(Hons) in Electircal and Electronics Engineering</strong> from 
+            <a href="https://www.bits-pilani.ac.in"><strong>BITS PILANI</strong></a>
+            <br/> <br/>
+            Abhinav is keen learner who likes to dabble with new technologies and explore
+            new frontier in various technological strides being made. Abhinav likes to simplify
+            tooling and workflows with automations so that data is made more readily accessible to end users.
+            Leaving aside the programming stuff, Abhinav likes to play games (especially PS4 exclusives :P) and
+            is an avid lover of badminton.
+          </p>
         </div>
 
         <div class="row">
@@ -98,40 +115,46 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Backend Developer</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Currently working as part backend engineer for DBSec group of Oracle
+              responsible for writing automation framework for software products
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 19 July 1995</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> <a href="http://abhinav-git19.github.io">My Hub</a> </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 9838676630</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bangalore,India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li id="age1"><i class="icofont-rounded-right"></i> <strong>Age:</strong></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelors</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Emailone: </strong> <a href="mailto:abhinav190795@gmail.com">abhinav190795@gmail.com</a> </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Open for switch:</strong> Available</li>
                 </ul>
               </div>
+              <script>
+                var today = new Date();
+                var age = today.getFullYear()-1995;
+                document.getElementById("age1").innerHTML="<i class=\"icofont-rounded-right\"></i> <strong>Age:</strong> "+age;
+              </script>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Abhinav aspires to be full-stack engineer for web based products which enables
+              him to solve problem at grassroots levels and scale them in order to
+              deliver solutions directly to client.
             </p>
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Facts Section ======= -->
+    <!--
+    ======= Facts Section =======
     <section id="facts" class="facts">
       <div class="container">
 
@@ -177,15 +200,21 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
-
+    </section>
+    ==End Facts Section==
+  -->
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Given below enlist where I stand with my proficiency in various
+            languages. In Addition to that, I am also experianced in working
+            Python based web frameworks such as Django and Flask; Java based
+            MVC framework SpringBoot; React from Frontend side and Docker from
+            devops side
+          </p>
         </div>
 
         <div class="row skills-content">
@@ -193,16 +222,16 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">CSS <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -213,35 +242,63 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Perl <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">GIT <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Python <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Java <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">C++ <i class="val">72%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Shell <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">SQL <i class="val">65%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
           </div>
 
         </div>
-
+  
       </div>
     </section><!-- End Skills Section -->
 
@@ -251,7 +308,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -427,8 +484,8 @@
 
       </div>
     </section><!-- End Portfolio Section -->
-
-    <!-- ======= Services Section ======= -->
+    <!-- 
+     ======= Services Section =======
     <section id="services" class="services">
       <div class="container">
 
@@ -471,8 +528,11 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
-    <!-- ======= Testimonials Section ======= -->
+    </section>
+    ===End Services Section ====
+     -->
+    <!-- 
+    ======= Testimonials Section ======= 
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
@@ -541,9 +601,11 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
-
-    <!-- ======= Contact Section ======= -->
+    </section>
+    ===End Testimonials Section===
+    -->
+    <!--
+     ======= Contact Section =======
     <section id="contact" class="contact">
       <div class="container">
 
@@ -615,8 +677,9 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
-
+    </section>
+    ==End Contact Section==
+  -->
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -630,6 +693,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+        Made with <span style="color: #e25555;">&#9829;</span> By Abhinav Singh
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
