Update resume link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhinav Singh</h1>
       <p>I'm <span class="typed" data-typed-items="Developer,BITS-Pilani Graduate,Gamer"></span></p>
-      <a class="btn btn-outline-primary" href="https://doc-08-20-apps-viewer.googleusercontent.com/viewer/secure/pdf/85qoqsk6rrdabcm56pdu2iess16jq9t7/qnpng013njjm51nh2qd7jlfbu957eiah/1596635775000/drive/08409355672147097264/ACFrOgCzoesbRpQmn9KkbgtFAmrKpaPDeI1oMg6mhKtPQDSHf5zVkKVn_gPmKPGNEO7uBal3MP8HDNmCqh--R31JdafdNEEOKdcYg9TnnD3ad8bwuR-i7uOUu0UBpNGACg9aVQ7iQ9Gy3gBspEzh?print=true&nonce=2rpmnd5t85noe&user=08409355672147097264&hash=0aks96qlu5578p3t7cn57l5m62rqb9ai">Download my Resume</a>
+      <a class="btn btn-outline-primary" href="https://drive.google.com/file/d/1_zKwmDasNXPyzv980faDL8AznGKNu7Mq/view?usp=sharing">Download my Resume</a>
     </div>
   </section><!-- End Hero -->
 
