--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhinav Singh</h1>
       <p>I'm <span class="typed" data-typed-items="Developer,BITS-Pilani Graduate,Gamer"></span></p>
-      <a class="btn btn-outline-primary" href="https://drive.google.com/file/d/1_zKwmDasNXPyzv980faDL8AznGKNu7Mq/view?usp=sharing">Download my Resume</a>
+      <a class="btn btn-outline-primary" href="https://drive.google.com/file/d/1_zKwmDasNXPyzv980faDL8AznGKNu7Mq/view?usp=sharing" target="_blank">Download my Resume</a>
     </div>
   </section><!-- End Hero -->
 
