--- a/index.html
+++ b/index.html
@@ -308,7 +308,12 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p></p>
+          <p>
+            Prefer traditional style?:  
+            <a class="btn btn-outline-primary" href="https://drive.google.com/file/d/1_zKwmDasNXPyzv980faDL8AznGKNu7Mq/view?usp=sharing" target="_blank">
+              Download my Resume
+            </a>
+          </p>
         </div>
 
         <div class="row">
@@ -316,50 +321,87 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Abhinav Singh</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p>
+                <em>Innovative and self-driven software developer with 2+ years of experience in designing and developing
+                  automation frameworks with intent of simplifying workflows in complicated developement infrastructure
+                </em>
+              </p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Experianced in Web and scalable API developement </li>
+                <li>Have a basic understanding about Machine Learning models</li>
+                <li>Experianced in JIRA workflows and agile development</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>B.E (Hons) in Electircal and Electronics Engineering</h4>
+              <h5>2014 - 2018</h5>
+              <p><em>BITS-PILANI, Goa</em></p>
+              <p>Graduted with distinction witch CPGA of 9.03.
+                Awarded BITS PILANI Merit-based Scholarship in the second, fourth
+                and fifth semester which is awarded to only top 5% of the batch
+                Awarded Excellence rating for the teaching assistance provided in 
+                two of our courses: Digital Design and Microprocessing/Interfacing
+              </p>
             </div>
+            
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Inter-High(12th) ISC Board Of Examination</h4>
+              <h5>2012 - 2014</h5>
+              <p><em>City Montessori School, Gomti Nagar, Lucknow</em></p>
+              <p>
+                Took Physics, Chemistry and Maths Stream with Computer Science as the
+                additional subject. Score 100% in ISC Maths Board Examination for which
+                got a distinction medal
+              </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Member of Techincal Staff</h4>
+              <h5>2018 Aug - Present</h5>
+              <p><em>Oracle India Pvt. ltd., Bangalore, India </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>
+                  Developed a fully automated framework using <strong>Python</strong> for
+                  <a href="https://www.oracle.com/database/technologies/security/dbsat.html">DBSATv2.1</a>
+                  which ensured faster <a href="https://en.wikipedia.org/wiki/Security_Technical_Implementation_Guide">STIG</a>
+                  compliance check by <em>70%</em>
+                </li>
+                <li>
+                  Developed <strong>perl/python</strong> based framework 
+                  using the DBSAT tool which reported <em>18 high/medium</em>
+                  risk security vulnerabilities in Oracle shipped
+                   Autonomous Transaction Processing Database.
+                </li>
+                <li>
+                  Worked on the <strong>REST</strong> based Test infrastructure for their
+                  cloud offering <a href="https://www.oracle.com/in/database/technologies/security/data-safe.html">Data Safe</a>
+                </li>
+                <li>
+                  Developed a <strong>Java</strong> application to run the Data discovery service via API on 
+                  database with <em>17 Oracle based data type</em> . This helped in expanding the data 
+                  discovery from only String based to numeric/float based data type as well
+                </li>
+                <li>Currently part of <strong>Oracle Cryptography Team</strong></li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Software Intern</h4>
+              <h5>2018 Jan - 2018 Jul</h5>
+              <p><em>Nvidia India Pvt. ltd., Bangalore ,India</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Was part of <a href="https://developer.nvidia.com/tegra-development">Tegra</a> Soc Middleware Team</li>
+                <li>
+                  Used <a href="https://www.yoctoproject.org">Yocto</a> to upgrade the existing toolchain 
+                  from GCC-6.2 to GCC-6.4 in their propriety SoC
+                </li>
+                <li>
+                  Researched and validated the use case of the publication-subscrition
+                  infrastructure of <a href="https://www.ros.org">ROS</a> in their SoC
+                </li>
               </ul>
             </div>
           </div>
