--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Projects</a></li>
           <!--<li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
           <!--<li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>-->
 
@@ -374,7 +374,7 @@
                   Developed <strong>perl/python</strong> based framework 
                   using the DBSAT tool which reported <em>18 high/medium</em>
                   risk security vulnerabilities in Oracle shipped
-                   Autonomous Transaction Processing Database.
+                  Autonomous Transaction Processing Database.
                 </li>
                 <li>
                   Worked on the <strong>REST</strong> based Test infrastructure for their
@@ -399,7 +399,7 @@
                   from GCC-6.2 to GCC-6.4 in their propriety SoC
                 </li>
                 <li>
-                  Researched and validated the use case of the publication-subscrition
+                  Researched and validated the use case of the publication-subscription
                   infrastructure of <a href="https://www.ros.org">ROS</a> in their SoC
                 </li>
               </ul>
@@ -415,8 +415,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Projects</h2>
+          <p>
+            Apart from Work, Abhinav often involves himself in developing  small command-line and
+            web-based apps. Mostly the motivation is to learn new technology but at times, the work could be 
+            regarding solving problems albeit at a small scale.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -424,8 +428,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-card">Web</li>
+              <li data-filter=".filter-web">ML</li>
             </ul>
           </div>
         </div>
@@ -436,8 +440,14 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h5><ins>Splitwise Command Line App</ins></h5>
+                <p>
+                  Created command line utilty for world famous expense tracking app to 
+                  keep track of those friends who often forget that they owe you something :P.
+                  Have also discussed ideas concerning scalability.
+                </p>
+                <!--<a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>-->
+                <a href="https://github.com/Abhinav-Git19/Splitwise-CLI" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -446,12 +456,17 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h5><ins>Airbnb Housing Recomendation</ins></h5>
+                <p>
+                  The project entails the idea of using K-NN algorithm to recommend housing
+                  based on user's housing preferences
+                </p>
+                <!--<a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>-->
+                <a href="https://github.com/Abhinav-Git19/Airbnb-Hosuing-Recommendation" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
@@ -461,17 +476,23 @@
               </div>
             </div>
           </div>
-
+          -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h5><ins>Integer Simplification</ins></h5>
+                <p>
+                  Implemented Infix to postfix algorithm from scratch to do simple interger
+                  calculations we used to do back in our school days
+                </p>
+                <!--<a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>-->
+
+                <a href="https://abhsimplycal-app.herokuapp.com/" target="_blank" title="Demo"><i class="bx bxs-right-arrow"></i></a>
               </div>
             </div>
           </div>
-
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
@@ -481,7 +502,7 @@
               </div>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
@@ -491,13 +512,20 @@
               </div>
             </div>
           </div>
-
+          -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
+                <h5><ins>IntentionValidator</ins></h5>
+                <p>
+                  Chatbots often have to think about the sentences they recieve from user
+                  and validate in certain context. Here I host a Django app which recieves
+                  request from different (assumed) server and and return a response based on validation
+                  criteria
+                </p>
                 <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/Abhinav-Git19/IntentionValidateDjangoApp" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -506,8 +534,13 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h5><ins>SpringProfileApp</ins></h5>
+                <p>
+                  Created a basic SpringBoot App that interacts with MySql server to 
+                  store/retrievve basic user details like name and email.
+                </p>
+                <!--<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>-->
+                <a href="https://github.com/Abhinav-Git19/MySpringBootApp" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -516,8 +549,14 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h5><ins>Amazon Food Reivews</ins></h5>
+                <p>
+                  Sourced from Kaggle, the project involves using 4 basic classifications
+                  algorithms to analyze the same dataset and benchmark the models on basis
+                  of accuracy and performance
+                </p>
+                <!--<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>-->
+                <a href="https://github.com/Abhinav-Git19/Amazon-Food-Review-Analysis" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
