Update Index html with Flipkart intro

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Abhinav Singh currently works as <strong>Member of Techinical Staff</strong>
-            in <em>Oracle India Pvt. Ltd</em>. He is part of <ins>Database Security Vulnerabilty Test and Tools Development</ins>
+            Abhinav Singh currently works as <strong>Software Engineer</strong>
+            in <em>Flipkart India pvt ltd. </em> Previously he worked in <em>Oracle India pvt ltd.</em> He was part of <ins>Database Security Vulnerabilty Test and Tools Development</ins>
             group responsible to developing automations and framework developemnt for detecting security vulnerabilites.
             <br/> <br/>
             He completed his <strong>B.E.(Hons) in Electircal and Electronics Engineering</strong> from 
