--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             Abhinav is keen learner who likes to dabble with new technologies and explore
             new frontier in various technological strides being made. Abhinav likes to simplify
             tooling and workflows with automations so that data is made more readily accessible to end users.
-            Leaving aside the programming stuff, Abhinav likes to play games (especially PS4/PS5 exclusives :P) and
+            Leaving aside the programming stuff, Abhinav likes to play games (especially PS4 exclusives :P) and
             is an avid lover of badminton.
           </p>
         </div>
